# c-ds-lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/ds/: list.h  queue.h  stack.h
src/: list.c  queue.c  stack.c
tests/: test_list.c  test_list_generic.c  test_queue.c  test_queue_generic.c  test_stack.c  test_stack_generic.c
